--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-
+<ul>
+  <li>Lorem ipsum dolor sit.</li>
+  <li>Quas rerum, quae quam.</li>
+  <li>Doloremque eligendi voluptatibus, inventore!</li>
+</ul>
 </body>
 </html>
